# SillyGame

./: .gitattributes  .gitmodules  CMakeLists.txt  README.md  impl_doc.md  select_pack.py  高级语言程序设计大作业报告.docx
codegen/: generate.sh  launcher.py  shader.schema.json  shader_file.py  sprite2d_file.py
codegen/silly_resgen/: __init__.py  __main__.py  basics.py  map2d_file.py  shader_file.py  sprite2d_file.py
codegen/silly_resgen/schemas/: map2d.schema.json  shader.schema.json  sprite2d.schema.json
codegen/silly_resgen/templates/: static_maps.cpp.jinja  static_maps.hpp.jinja  static_shaders.cpp.jinja  static_shaders.hpp.jinja  static_sprites.cpp.jinja  static_sprites.hpp.jinja
codegen/templates/: static_shaders.cpp.jinja  static_shaders.hpp.jinja  static_sprites.cpp.jinja  static_sprites.hpp.jinja
extlibs/: .gitignore
include/: silly_framework.hpp
include/silly_framework/: config.h
include/silly_framework/bundled/glad/: glad.h
include/silly_framework/facilities/: activity_manager.hpp  game_window.hpp  iface_activity.hpp  input_manager.hpp  render_manager.hpp  texture_manager.hpp  vkey_def.hpp
include/silly_framework/ogl/: glfw.h  oglwrap.hpp
include/silly_framework/rewheel/: circ_queue.hpp  gpu_tex_img.hpp  hash_utils.hpp  map_utils.hpp  naive_lru.hpp  naive_timer.hpp  ogl_env.hpp  ogl_utils.hpp  os_misc.hpp  stb_image.hpp  swap_queue.hpp
include/silly_framework/settings/: logger.hpp  logger_all.hpp
include/silly_framework/utilities/: base_activity.hpp  coro_host.hpp  map2d.hpp  sprite2d.hpp
res/: .gitignore  black_jack_entry.map2d.yaml  black_jack_entry.pxo  black_jack_table.pxo  container_portrait.pxo  container_portrait.sprite2d.json  container_portrait.sprite2d.yaml  container_small.pxo  container_small.sprite2d.json  container_small.sprite2d.yaml  dorm.map2d.yaml  dorm.pxo  dorm_balcony.map2d.yaml  dorm_balcony.pxo  dorm_corridor_left.map2d.yaml  dorm_corridor_left.pxo  dorm_corridor_middle.map2d.yaml  dorm_corridor_middle.pxo  dorm_corridor_right.map2d.yaml  dorm_corridor_right.pxo  dorm_room.map2d.yaml  dorm_room.pxo  dorm_stairs.map2d.yaml  dorm_stairs.pxo  dorm_stairs_bottom.map2d.yaml  dorm_stairs_bottom.pxo  dorm_stairs_middle.map2d.yaml  dorm_stairs_middle.pxo  dorm_stairs_top.map2d.yaml  dorm_stairs_top.pxo  enemy_bullet.pxo  enemy_bullet.sprite2d.yaml  enemy_plane.pxo  enemy_plane.sprite2d.yaml  genshin_pursuit_author.map2d.yaml  genshin_pursuit_author.pxo  genshin_pursuit_entry.map2d.yaml  genshin_pursuit_entry.pxo  genshin_pursuit_main.map2d.yaml  genshin_pursuit_main.pxo  (+11 more)
res/power_numbers/: -.pxo  0.pxo  1.pxo  2.pxo  3.pxo  4.pxo  5.pxo  6.pxo  7.pxo  8.pxo  9.pxo
src/: framework.hpp  globals.hpp  image_loader.cpp  image_loader.hpp  main.cpp  main_frame.cpp  main_frame.hpp  ogl_deps.hpp  ogl_main_window.cpp  ogl_main_window.hpp  res_loader.cpp  res_loader.hpp  square.cpp  static_shaders.hpp
src/activities/: demo.cpp  demo.hpp  show_square.cpp  show_square.hpp
src/facilities/: activity_manager.cpp  activity_manager.hpp  base_manager.cpp  base_manager.hpp  game_window.cpp  game_window.hpp  iface_activity.hpp  input_manager.cpp  input_manager.hpp  ogl_deps.hpp  ogl_main_window.cpp  render_manager.cpp  render_manager.hpp  res_loader.cpp  res_loader.hpp  static_shaders.hpp  texture_manager.cpp  texture_manager.hpp
src/framework/facilities/: activity_manager.cpp  game_window.cpp  game_window.hpp  iface_activity.hpp  input_manager.cpp  input_manager.hpp  render_manager.cpp  render_manager.hpp  res_loader.cpp  res_loader.hpp  texture_manager.cpp  texture_manager.hpp
src/framework/shaders/: sprite.shader.json  transform_shape.vert
src/framework/utilities/: base_activity.hpp  gpu_tex_img.cpp  gpu_tex_img.hpp  macros.hpp  map2d.cpp  map2d.hpp  naive_timer.hpp  ogl_env.hpp  ogl_utils.hpp  sprite2d.cpp  sprite2d.hpp  static_shaders.hpp  swap_queue.hpp  vkey_def.cpp  vkey_def.hpp
src/main/: main.cpp  static_maps.cpp  static_maps.hpp  static_sprites.cpp  static_sprites.hpp
src/main/activities/: avg_scene.cpp  avg_scene.hpp  avg_scripts.hpp  black_jack.cpp  black_jack.hpp  demo.cpp  demo.hpp  plane_battle_scene.cpp  plane_battle_scene.hpp  render_utils.hpp
src/main/activities/avg_scripts/: black_jack_entry.cpp  dorm_balcony.cpp  dorm_corridor_left.cpp  dorm_corridor_middle.cpp  dorm_corridor_right.cpp  dorm_room.cpp  dorm_stairs.cpp  dorm_stairs_bottom.cpp  dorm_stairs_middle.cpp  genshin_pursuit_author.cpp  genshin_pursuit_entry.cpp  genshin_pursuit_main.cpp  utils.hpp
src/main/engine/: basics.cpp  basics.hpp  box_quadtree.cpp  box_quadtree.hpp  cppcoro_generator.hpp  simulator.cpp  simulator.hpp
src/shaders/: cyan_color.frag  square.shader.json  transform_shape.vert  use_texture.frag
src/silly_framework/: static_shader_inits.hpp  static_shaders.cpp  static_shaders.hpp
src/silly_framework/bundled/glad/: glad.c
src/silly_framework/facilities/: activity_manager.cpp  game_window.cpp  input_manager.cpp  render_manager.cpp  res_loader.cpp  res_loader.hpp  texture_manager.cpp  vkey_def.cpp
src/silly_framework/rewheel/: gpu_tex_img.cpp  ogl_env.cpp  os_misc.cpp  stb_image.cpp
src/silly_framework/settings/: logger.cpp
src/silly_framework/shaders/: fill.shader.json  transform_shape_notex.vert
src/silly_framework/utilities/: map2d.cpp  sprite2d.cpp
src/utilities/: base_activity.hpp  gpu_tex_img.hpp  macros.hpp  map2d.cpp  map2d.hpp  naive_lru.hpp  naive_timer.cpp  naive_timer.hpp  ogl_env.cpp  ogl_env.hpp  ogl_utils.hpp  os_misc.cpp  os_misc.hpp  sprite2d.cpp  sprite2d.hpp  sprite2d_ref.cpp  sprite2d_ref.hpp  static_shader_inits.hpp  static_shaders.cpp  static_shaders.hpp  static_sprites.cpp  static_sprites.hpp  stb_image_wrap.cpp  stb_image_wrap.hpp  swap_queue.hpp
